more styling tweaks, fixed z-index of movie-list

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -12,6 +12,7 @@ body {
   margin-bottom: 3em;
   border-radius: 10px;
   background-color: red;
+  position: relative;
 }
 
 .error {
