--- a/app/assets/stylesheets/sidebar.css
+++ b/app/assets/stylesheets/sidebar.css
@@ -3,18 +3,15 @@
   float: right;
 }
 
-.move-list {
-  float: left;
-}
-
 #sidebar {
   color: white;
   border-top-left-radius:.5em;
   border-bottom-left-radius:.5em;
   position: fixed;
   height: 80%;
+  margin-top: 1em;
   right: 0;
-  width: 25%;
+  width: 28%;
   background-color: #34495e;
   -webkit-box-shadow: 0px 0px 12px rgba(0,0,0,0.4);
   -moz-box-shadow: 0px 2px 12px rgba(23,69,88,0.5);
@@ -53,7 +50,7 @@
 }
 
 .remove-movie {
-  color: white;
+  color: #f9a646;
 }
 
 #selected-movies{
