--- a/app/assets/stylesheets/survey.css
+++ b/app/assets/stylesheets/survey.css
@@ -5,9 +5,12 @@
   text-align: center;
   margin-top: 1em;
   margin-right: 5px;
+  margin-left: 10px;
   padding-top: 0.5em;
   background-color: #9ca98c;
   border-radius: 10px;
+  position: absolute;
+  z-index: -5;
 }
 
 .movie-box {
